# amplifier-bundle-notify

./: README.md  bundle.md  bundle.yaml  pyproject.toml
agents/: notify-expert.yaml
amplifier_bundle_notify/: __init__.py
behaviors/: desktop-notifications.yaml  push-notifications.yaml
context/: EVENTS.md  NOTIFICATIONS.md
docs/: EXTENDING.md
modules/hooks-notify/: README.md  pyproject.toml
modules/hooks-notify-push/: README.md  pyproject.toml
modules/hooks-notify-push/amplifier_module_hooks_notify_push/: __init__.py
modules/hooks-notify/amplifier_module_hooks_notify/: __init__.py
