[project]
name = "amplifier-bundle-notify"
version = "0.1.0"
description = "Amplifier bundle for desktop notifications on turn completion"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Microsoft", email = "amplifier@microsoft.com" }]
dependencies = [
    "amplifier-core>=0.1.0",
    "amplifier-module-hooks-notify>=0.1.0",
]

[project.entry-points."amplifier.bundles"]
notify = "amplifier_bundle_notify:get_bundle_path"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_bundle_notify"]
include = [
    "bundle.yaml",
    "context/*.md",
    "agents/*.yaml",
    "behaviors/*.yaml",
]
