[project]
name = "amplifier-bundle-notify"
version = "0.1.0"
description = "Amplifier bundle for desktop notifications on turn completion"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Microsoft", email = "amplifier@microsoft.com" }]
dependencies = []  # amplifier-core is a peer dependency, not on PyPI

[project.entry-points."amplifier.bundles"]
notify = "amplifier_bundle_notify:get_bundle_path"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_bundle_notify"]

[tool.hatch.build.targets.wheel.force-include]
"bundle.md" = "amplifier_bundle_notify/_bundle/bundle.md"
"context" = "amplifier_bundle_notify/_bundle/context"
"agents" = "amplifier_bundle_notify/_bundle/agents"
"behaviors" = "amplifier_bundle_notify/_bundle/behaviors"
