[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-module-hooks-notify-push"
version = "0.1.0"
description = "Push notifications via ntfy.sh when assistant turns complete"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Microsoft Corporation" }
]
keywords = ["amplifier", "notifications", "push", "ntfy", "mobile"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.entry-points."amplifier.modules"]
hooks-notify-push = "amplifier_module_hooks_notify_push:mount"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_notify_push"]
