[project]
name = "amplifier-module-hooks-notify"
version = "0.1.0"
description = "Desktop notifications on assistant turn completion"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Microsoft", email = "amplifier@microsoft.com" }]
dependencies = ["amplifier-core>=0.1.0"]

[project.entry-points."amplifier.modules"]
hooks-notify = "amplifier_module_hooks_notify:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_notify"]
